--- a/ocaml/dune-project
+++ b/ocaml/dune-project
@@ -1,11 +1,11 @@
 (lang dune 3.10)
 
-(name simply-lambda)
+(name simply-lambdas)
 
 (generate_opam_files true)
 
 (source
- (github abdllahdev/simply-lambda))
+ (github abdllahdev/simply-lambdas))
 
 (authors "Abdullah Fathy Elsayed (@abdllahdev)")
 
@@ -14,7 +14,7 @@
 (license MIT)
 
 (package
- (name simply-lambda)
+ (name simply-lambdas)
  (synopsis "Lambda calculus tutorials")
  (description "A series of tutorials for lambda calculus")
  (depends ocaml dune core fmt)
